[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/actualHealth.png" type="Texture" id=1]
[ext_resource path="res://UI/BarUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/BarEmpty.png" type="Texture" id=3]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/OnlyBarUnder.png" type="Texture" id=4]
[ext_resource path="res://Menu/medieval-pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/OnlyManaBarUnder.png" type="Texture" id=6]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/StaminaBar.png" type="Texture" id=7]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/OnlyManaBar.png" type="Texture" id=8]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/StaminaBarOnly.png" type="Texture" id=9]
[ext_resource path="res://Assets/Area/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/ManaBar.png" type="Texture" id=10]
[ext_resource path="res://Assets/Caverinha_do_celin2.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="BarUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthProgressBar" type="TextureProgress" parent="."]
margin_left = 50.0
margin_top = 80.0
margin_right = 110.0
margin_bottom = 87.0
rect_scale = Vector2( 2.5, 2.5 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
radial_center_offset = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HealthProgressBar"]
position = Vector2( 22.5002, 3.99932 )
texture = ExtResource( 3 )

[node name="HealthBarLabel" type="Label" parent="HealthProgressBar"]
margin_left = 15.2897
margin_top = 0.594381
margin_right = 72.2897
margin_bottom = 12.5944
rect_scale = Vector2( 0.490096, 0.5558 )
custom_fonts/font = SubResource( 1 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaProgressBar" type="TextureProgress" parent="."]
margin_left = 47.0
margin_top = 150.0
margin_right = 109.0
margin_bottom = 157.0
rect_scale = Vector2( 2.5, 2.5 )
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="StaminaProgressBar"]
position = Vector2( 23.491, 4 )
texture = ExtResource( 7 )

[node name="StaminaBarLabel" type="Label" parent="StaminaProgressBar"]
margin_left = 15.2897
margin_top = 0.594381
margin_right = 72.2897
margin_bottom = 14.5944
rect_scale = Vector2( 0.490096, 0.5558 )
custom_fonts/font = SubResource( 1 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ManaProgressBar" type="TextureProgress" parent="."]
margin_left = 47.0
margin_top = 220.0
margin_right = 109.0
margin_bottom = 227.0
rect_scale = Vector2( 2.5, 2.5 )
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ManaProgressBar"]
position = Vector2( 23.491, 4 )
texture = ExtResource( 10 )

[node name="ManaBarLabel" type="Label" parent="ManaProgressBar"]
margin_left = 15.2897
margin_top = 0.594381
margin_right = 72.2897
margin_bottom = 14.5944
rect_scale = Vector2( 0.490096, 0.5558 )
custom_fonts/font = SubResource( 1 )
text = "100/100"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="KillCount" type="Sprite" parent="."]
position = Vector2( 75, 514 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="KillCountLabel" type="Label" parent="KillCount"]
margin_left = -7.5
margin_top = 21.5
margin_right = 8.5
margin_bottom = 33.5
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}
